Adiciona interesses e experiência

--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ hr{
     background-color: black;
     border: 0.5px solid;
 }
+
+.listItem{
+    font-size: 14px;
+    color: rgb(168, 164, 164);
+}
